Fix alignment with menu nav

--- a/app/styles/components/_overrides.scss
+++ b/app/styles/components/_overrides.scss
@@ -23,6 +23,10 @@
   color: $state-danger-text;
 }
 
+.navbar-nav > li > a {
+  padding-top: 18px;
+}
+
 .form-control {
   // border: none;
   // border-bottom: 1px solid $input-border;
@@ -78,6 +82,47 @@
   line-height: 1.42857;
   vertical-align: middle;
   border-radius: 4px;
+}
+
+// Panel box shadow
+.panel-default, .panel-primary {
+  box-shadow: 1px 2px 2px rgba(29, 39, 71, .4);
+}
+
+// .panel-default > .panel-heading {
+//   background: linear-gradient(to bottom, $panel-default-heading-bg, $panel-default-border);
+// }
+
+// .panel-primary > .panel-heading {
+//   background: linear-gradient(to bottom, $brand-primary, darken($brand-primary, 5%));
+// }
+
+// .panel-success > .panel-heading {
+//   background: linear-gradient(to bottom, $state-success-bg, $state-success-border);
+// }
+
+// .panel-info > .panel-heading {
+//   background: linear-gradient(to bottom, $state-info-bg, $state-info-border);
+// }
+
+// .panel-danger > .panel-heading {
+//   background: linear-gradient(to bottom, $state-danger-bg, $state-danger-border);
+// }
+
+// Panel condensed
+.panel-condensed {
+  .panel-heading {
+    padding: 5px 15px;
+  }
+  .panel-heading h3 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  .panel-body {
+    padding: 0px
+  }
 }
 
 // Variations
